# examples

CMake/SomeApplication/: CMakeLists.txt
CMake/app/: CMakeLists.txt  app.cpp
CMake/wee/: CMakeLists.txt  FindWee.cmake  wee.cpp
uscxml/: CMakeLists.txt  test.scxml
uscxml/src/: main.cpp
